--- a/FINAL/PROJECT/BUYER_PANEL/index.html
+++ b/FINAL/PROJECT/BUYER_PANEL/index.html
@@ -48,37 +48,37 @@
           <a href="php/products.php" class="product-btn">View Products</a>
         </div>
         <div class="product-card">
-          <img src="https://www.startech.com.bd/image/cache/catalog/monitor/asus/vg279q3a/vg279q3a-01-228x228.webp" alt="27'' 180Hz Gaming Monitor">
+          <img src="https://www.startech.com.bd/image/cache/catalog/monitor/msi/pro-mp275pg/pro-mp275pg-01-228x228.webp" alt="27'' 180Hz Gaming Monitor">
           <h4 class="product-card-title">27" 180Hz Monitor</h4>
           <p class="product-card-price">$299</p>
           <a href="php/products.php" class="product-btn">View Products</a>
         </div>
         <div class="product-card">
-          <img src="https://www.startech.com.bd/image/cache/catalog/headset/hyperx/cloud-stinger-2/cloud-stinger-2-01-228x228.webp" alt="Gaming Headset">
+          <img src="https://www.startech.com.bd/image/cache/catalog/headphone/razer/blackshark-v2-pro-2023/blackshark-v2-pro-2023-01-500x500.webp" alt="Gaming Headset">
           <h4 class="product-card-title">Gaming Headset</h4>
           <p class="product-card-price">$65</p>
           <a href="php/products.php" class="product-btn">View Products</a>
         </div>
         <div class="product-card">
-          <img src="https://www.startech.com.bd/image/cache/catalog/power-bank/anker/a1385h11/a1385h11-01-228x228.webp" alt="20K Power Bank">
+          <img src="https://www.startech.com.bd/image/cache/catalog/power-bank/Hoco/j89/j89-01-500x500.webp" alt="20K Power Bank">
           <h4 class="product-card-title">20K Power Bank</h4>
           <p class="product-card-price">$49</p>
           <a href="php/products.php" class="product-btn">View Products</a>
         </div>
         <div class="product-card">
-          <img src="https://www.startech.com.bd/image/cache/catalog/ssd/samsung/990-pro-heatsink/990-pro-heatsink-01-228x228.webp" alt="NVMe SSD 2TB">
+          <img src="https://www.startech.com.bd/image/cache/catalog/ssd/corsair/mp600-pro-nh-8tb/mp600-pro-nh-01-228x228.webp" alt="NVMe SSD 2TB">
           <h4 class="product-card-title">2TB NVMe SSD</h4>
           <p class="product-card-price">$189</p>
           <a href="php/products.php" class="product-btn">View Products</a>
         </div>
         <div class="product-card">
-          <img src="https://www.startech.com.bd/image/cache/catalog/casing/cooler-master/masterbox-520/520-mesh-argb-01-228x228.webp" alt="ARGB PC Case">
+          <img src="https://www.startech.com.bd/image/cache/catalog/component/casing/antec/torque/torque-1-228x228.jpg" alt="ARGB PC Case">
           <h4 class="product-card-title">ARGB PC Case</h4>
           <p class="product-card-price">$110</p>
           <a href="php/products.php" class="product-btn">View Products</a>
         </div>
         <div class="product-card">
-          <img src="https://www.startech.com.bd/image/cache/catalog/gpu/colorful/igame-rtx-4070-ultra-w/igame-rtx-4070-ultra-w-01-228x228.webp" alt="RTX 4070 GPU">
+          <img src="https://www.startech.com.bd/image/cache/catalog/graphics-card/pny/geforce-rtx-4070-ti-super-16gb-xlr8/geforce-rtx-4070-ti-super-16gb-xlr8-01-500x500.webp" alt="RTX 4070 GPU">
           <h4 class="product-card-title">RTX 4070 GPU</h4>
           <p class="product-card-price">$599</p>
           <a href="php/products.php" class="product-btn">View Products</a>
